--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "popper.js": "^1.14.5",
     "react": "^16.6.3",
     "react-addons-css-transition-group": "^15.6.2",
-    "react-bootstrap": "^1.0.0-beta.3",
     "react-dev-utils": "^6.1.1",
     "react-dom": "^16.6.3",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
-    "react-transition-group": "^2.5.0"
+    "react-transition-group": "^2.5.0",
+    "reactstrap": "^6.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
