--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^16.6.3",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
+    "react-spring": "^6.1.10",
     "react-transition-group": "^2.5.0",
     "reactstrap": "^6.5.0"
   },
