--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "myportfolio",
+  "homepage" : "http://apark5040.github.io/MyPortfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
