--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "myportfolio",
-  "homepage" : "http://apark5040.github.io/MyPortfolio",
+  "homepage": "http://apark5040.github.io/MyPortfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "bootstrap": "^4.1.3",
+    "gh-pages": "^2.0.1",
     "jquery": "^3.3.1",
     "node-sass": "^4.10.0",
     "popper.js": "^1.14.5",
@@ -21,6 +22,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
