--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "myportfolio",
-  "homepage": "http://justandrewpark.com",
+  "homepage": "https://justandrewpark.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
