--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "myportfolio",
-  "homepage": "https://apark5040.github.io/MyPortfolio/",
+  "homepage": "https://www.justandrewpark.com/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
